Issue #3035317 by marcelovani: Install amptheme when running tests

--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "source": "http://cgit.drupalcode.org/amp"
   },
   "require": {
-    "lullabot/amp": "^1.0.0"
+    "lullabot/amp": "^1.0.0",
+    "drupal/amptheme": "^1.0"
   }
 }
