--- a/drupalci.yml
+++ b/drupalci.yml
@@ -4,26 +4,53 @@
 build:
   assessment:
     validate_codebase:
+      phplint:
+      # Re-run composer install to ensure the dependencies resolve for the
+      # containerized PHP version.
       container_composer:
+        options: ' install --prefer-dist --no-suggest --no-progress --no-interaction'
+        halt-on-fail: true
+      csslint:
         halt-on-fail: false
-      phplint: {  }
+      eslint:
+        # A test must pass eslinting standards check in order to continue processing.
+        halt-on-fail: false
       phpcs:
-        start_directory: null
+        # phpcs will use core's specified version of Coder.
         sniff-all-files: false
         halt-on-fail: false
-        coder-version: ~8.2.12@stable
-      eslint:
-        halt-on-fail: false
     testing:
-      run_tests_d7:
+      # run_tests task is executed several times in order of performance speeds.
+      # halt-on-fail can be set on the run_tests tasks in order to fail fast.
+      # suppress-deprecations is false in order to be alerted to usages of
+      # deprecated code.
+      run_tests.phpunit:
+        types: 'PHPUnit-Unit'
         testgroups: '--all'
-        types: 'Simpletest,PHPUnit-Unit,PHPUnit-Kernel,PHPUnit-Functional'
-        color: true
-        die-on-fail: false
-        keep-results: true
-        keep-results-table: false
-        verbose: false
-        concurrency: 0
+        suppress-deprecations: false
         halt-on-fail: false
-        repeat: 1
-        suppress-deprecations: true
+      run_tests.kernel:
+        types: 'PHPUnit-Kernel'
+        testgroups: '--all'
+        suppress-deprecations: false
+        halt-on-fail: false
+      run_tests.simpletest:
+         types: 'Simpletest'
+         testgroups: '--all'
+         suppress-deprecations: false
+         halt-on-fail: false
+         verbose: true
+      run_tests.functional:
+        types: 'PHPUnit-Functional'
+        testgroups: '--all'
+        suppress-deprecations: false
+        halt-on-fail: false
+      run_tests.javascript:
+        concurrency: 15
+        types: 'PHPUnit-FunctionalJavascript'
+        testgroups: '--all'
+        suppress-deprecations: false
+        halt-on-fail: false
+      # Run nightwatch testing.
+      # @see https://www.drupal.org/project/drupal/issues/2869825
+      nightwatchjs:
